@@ -2,13 +2,11 @@ package codeverse.com.web_be.service.CategoryService;
 
 import codeverse.com.web_be.dto.response.CategoryResponse.CategoryResponse;
 import codeverse.com.web_be.entity.Category;
-import codeverse.com.web_be.entity.Course;
 import codeverse.com.web_be.repository.CategoryRepository;
 import codeverse.com.web_be.service.GenericServiceImpl;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CategoryServiceImpl extends GenericServiceImpl<Category, Long> implements ICategoryService {
@@ -25,6 +23,6 @@ public class CategoryServiceImpl extends GenericServiceImpl<Category, Long> impl
         return categoryRepository.findAllByIsDeletedFalse()
                 .stream()
                 .map(CategoryResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
